--- a/config/aws.yml
+++ b/config/aws.yml
@@ -1,7 +1,7 @@
 # config/aws.yml
 defaults: &defaults
-  access_key_id: "AKIAJBCOPQR5JPUPQOWA"
-  secret_access_key: "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"
+  access_key_id: <%= ENV["AWS_ACCESS_KEY_ID"] %>
+  secret_access_key: <%= ENV["AWS_SECRET_ACCESS_KEY"] %>
 development:
   <<: *defaults
   bucket: "nurdgurls-development"
